# sot_fcl_distance_computation

./: CMakeLists.txt  manifest.xml  package.xml
include/sot_fcl_distance_computation/: DistanceComputation.h  conversions.h
src/: DistanceComputation.cpp  distance_query.cpp
